syntax = "proto3";

message GetTimerRequest {
  int64 timerId = 1;
}