syntax = "proto3";

import "Timer.proto";

message RemoveTimerRequest {
  int64 timerId = 1;
}