syntax = "proto3";
import "org/timemates/api/timers/types/Timer.proto";

option java_package = "org.timemates.api.timers.requests";

message GetTimersRequest {
  optional string pageToken = 1;
  optional int32 pageSize = 2;

  message Response {
    repeated Timer timers = 1;
    optional string nextPageToken = 2;
  }
}