syntax = "proto3";

option java_package = "io.timemates.api.timers.requests.members.invites";

message RemoveInviteRequest {
  int64 timerId = 1;
  string inviteCode = 2;
}